--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>BitniTex - Architecture Explorer & Project Tracker</title>
   <meta name="description" content="Interactive architecture diagram viewer and project tracker for BitniTex" />
+  <meta name="author" content="Hesam Kazemi (HessiKz)" />
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💎</text></svg>">
   <!-- Modern Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
